@@ -1,0 +1,1 @@
+fill rom 0 0xffff 0
